[package]
name = "wintempclean"
version = "0.1.0"
authors = ["Nicola Pellegrini <xbb@xbblabs.com>"]
edition = "2021"
publish = false

[dependencies]
humantime = "2.1"
log = "0.4"

[dependencies.anyhow]
version = "1.0"
features = ["backtrace"]

[dependencies.clap]
version = "3.0"
default-features = false
features = ["suggestions", "std", "cargo"]

[dependencies.simplelog]
version = "0.11"
default-features = false
features = []

[profile.release]
lto = true
